Restore and fix "comment out youtube badge on file page to fix mobile style"
(1) This reverts commit 8641a3ee1c641ea1af334a3c0cd776905179466d.

(2) Fix floating-player misalignment due to YT badge in mobile by hiding the badge.

At first, the suggestion to truncate the left URI to keep the entire thing single-lined was implemented, but during testing, I realized that the YT badge will take up the entire width anyway (especially on other languages). The URI is more important than the badge, and truncating both of them would be ugly.

Given the preference to not have 2 lines for this, we'll just hide the badge for the mobile case.

For the Channel Page case, let's make it single-line through "4454: URL / top claims overlap" instead. We'll keep this commit/PR limited to fixing the YT badge.

--- a/ui/scss/component/_media.scss
+++ b/ui/scss/component/_media.scss
@@ -49,6 +49,13 @@
   right: 0;
 }
 
+.media__uri--right--yt-badge {
+  @extend .media__uri--right;
+  @media (max-width: $breakpoint-small) {
+    display: none;
+  }
+}
+
 //  M E D I A
 //  S U B T I T L E
 
